# Interview-AI

./: .pre-commit-config.yaml  README.md  langgraph.json  pyproject.toml
examples/: cli_test.py
src/interview_sim/app/: graph.py  main.py  state.py
src/interview_sim/app/utils/: audio.py  loaders.py
src/interview_sim/data/: common_questions.txt  company_info.txt  job_description.txt  resume.txt
src/interview_sim/frontend/: app.py
